[tool.poetry]
name = "comparator"
version = "0.4.0"
description = ""
authors = ["Dean Shaff <dshaff@swin.edu.au>"]

[tool.poetry.dependencies]
python = "^3.6"
scipy = "^1.2"
numpy = "^1.16"
mypy = "^0.670.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.0"

[tool.poetry.scripts]
test = "python -m unittest"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
