[tool.poetry]
name = "comparator"
version = "0.10.3"
description = ""
authors = ["Dean Shaff <dshaff@swin.edu.au>"]

readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.6"
scipy = "^1.2"
numpy = "^1.16"
mypy = "^0.670.0"
matplotlib = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
